--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:cadetblue;">
+<head>
+<style>
+body {
+  background-image: url(https://upload.wikimedia.org/wikipedia/commons/2/23/Viggen_%2852526298757%29.jpg);
+  background-repeat: no-repeat;
+    }
+</style>
+</head>
+
+<body>
 
 <h1>Howdy</h1>
 
