--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-  background-image: url(https://upload.wikimedia.org/wikipedia/commons/2/23/Viggen_%2852526298757%29.jpg);
+  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Viggen_%2852526298757%29.jpg/2560px-Viggen_%2852526298757%29.jpg);
   background-repeat: no-repeat;
     }
 </style>
@@ -11,7 +11,7 @@ body {
 
 <body>
 
-<h1>Howdy</h1>
+<h1>90% of gamblers stop before they hit it big</h1>
 
 </body>
 </html>
