--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ body {
   background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Viggen_%2852526298757%29.jpg/2560px-Viggen_%2852526298757%29.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: 1920px 1280px;
     }
 </style>
 </head>
