--- a/index.html
+++ b/index.html
@@ -21,26 +21,28 @@
     <div id="score_num">Score: 0 — Round: 0/5</div>
 </div>
 
-<div class="audio_player">
-    <div id="waveform" style="width: 700px; height: 700px;"></div>
-    <div id="result_overlay">
-        <h2 id="revealed_city_name">City Name</h2>
-        <br><br>
-        <h3 id="round_score">Score Gained</h3>
+<div class="main_wrapper">
+    <div class="audio_player">
+        <div id="waveform"></div>
+        <div id="result_overlay">
+            <h2 id="revealed_city_name">City Name</h2>
+            <br><br>
+            <h3 id="round_score">Score Gained</h3>
+        </div>
+        <div id="audio_control">
+            <input id="play_button" type="image" src="assets/play_sound.png"></input>
+            <image id="volume_icon" src="assets/volume_icon.png"></image>
+            <input type="range" class="slider" id="volume-slider"></input>
+        </div>
     </div>
-    <div id="audio_control">
-        <input id="play_button" type="image" src="assets/play_sound.png"></input>
-        <image id="volume_icon" src="assets/volume_icon.png"></image>
-        <input type="range" class="slider" id="volume-slider"></input>
-    </div>
-</div>
 
-<div class="map_container">
-    <div id="map"></div>
-    <div id="map_buttons">
-        <button id="guess_button" class="button_style" onclick="confirmGuess()">Confirm Guess</button>
-        <button id="next_round_button" class="button_style" onclick="nextRoundButton()">Next Round</button>
-        <button id="new_game_button" class="button_style" onclick="newGame()">New Game</button>
+    <div class="map_container">
+        <div id="map"></div>
+        <div id="map_buttons">
+            <button id="guess_button" class="button_style" onclick="confirmGuess()">Confirm Guess</button>
+            <button id="next_round_button" class="button_style" onclick="nextRoundButton()">Next Round</button>
+            <button id="new_game_button" class="button_style" onclick="newGame()">New Game</button>
+        </div>
     </div>
 </div>
 
