--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <div class="extras_div">
             <p id="highscore">Weekly Highscore: 0</p>
             <div class="social_icons">
-                <a href="mailto:echolocatedev@gmail.com"><image id="contact_me" src="assets/contact.png" title="Have any feedback or bugs?
+                <a href="mailto:&#x65;&#x63;&#x68;&#x6F;&#x6C;&#x6F;&#x63;&#x61;&#x74;&#x65;&#x64;&#x65;&#x76;&#x40;&#x67;&#x6D;&#x61;&#x69;&#x6C;&#x2E;&#x63;&#x6F;&#x6D;"><image id="contact_me" src="assets/contact.png" title="Have any feedback or bugs?
 Is a sound misleading for the city it represents?
-Do you want sound from a tour of yours taken down?
+Do you want sound from a video of yours taken down?
 Or uploaded?
 Shoot me a message!"></image></a>
                 <a href="https://www.instagram.com/echolocate_official/" class="fa fa-instagram fa-2x"></a>
@@ -75,6 +75,7 @@ Shoot me a message!"></image></a>
         <div id="results_header">
             <span id="close_btn" onclick="hideResults()">&times;</span>
             <h1 id="result_stat">title</h1>
+            <h1 id="max_points">/5000</h1>
         </div>
         <p id="detailed_results">hello there</p>
     </div>
