test touchscreen compatibility for map

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@ Shoot me a message!"></image></a>
     crossorigin=""></script>
 
 <script src="https://unpkg.com/wavesurfer.js@7"></script>
+<link rel="stylesheet" href="//unpkg.com/leaflet-gesture-handling/dist/leaflet-gesture-handling.min.css" type="text/css">
+<script src="//unpkg.com/leaflet-gesture-handling"></script>
 
 <script src="cities.js"></script>
 <script src="code.js"></script>
